<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="ST20_TraySequence" Id="{540900fe-b1db-40be-acf4-286371c46f76}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ST20_TraySequence
VAR
	arrStepStatus : ARRAY [1..100] OF STRING;
	arrStepUsedTime	: ARRAY [1..100] OF TIME;
	tonStepTimer : TON;
	iStep : INT;
	iMatching: INT;
	bStart: BOOL;
	sBarcode: STRING;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[tonStepTimer();

bStart := (G_MachineControl.stMachineCurrentMode.AUTO_RUNNING OR
				G_MachineControl.stMachineCurrentMode.DRYRUN_RUNNING);

//New Tray Procesee
CASE iStep OF
		
	0://Ready
		IF bStart AND G_Auto.A20_bIsNewTray THEN
			G_Auto.A20_bTriggerScanner := TRUE;
			iStep := 10;
		END_IF
		
	10://Waiting scanner ack
		IF NOT G_Auto.A20_bScannerResultDone THEN
			iStep := 20;
		END_IF
		
	20://Waiting scanner result done
		IF G_Auto.A20_bScannerResultDone THEN
			sBarcode := G_Auto.A20_sScannerBarcode;
			iStep := 30;
		ELSIF G_Error.E20_BarcodeTimeout THEN
			G_Error.E20_BarcodeTimeout := FALSE;
			G_Auto.A20_bTrayReady := FALSE;
			G_Auto.A20_bMESPass := FALSE;
			G_Auto.A20_bMESCheckDone := TRUE;
			iStep := 40;
		END_IF
		
	30://Trigger check at MES
		arrStepStatus[2] := 'Step 2: Trigger Check at MES';
		G_Auto.A20_bMESPass := FALSE;
		G_Auto.A20_bMESCheckDone := FALSE;
		G_Auto.A20_bMESCheck := TRUE;
		iStep := 40;	
		
	40://Waiting check at MES done
		IF G_Auto.A20_bMESCheckDone THEN
			G_Auto.A20_bMESCheck := FALSE;
			IF G_Auto.A20_bMESPass THEN
				G_Auto.A20_bTrayReady := TRUE;
				G_Auto.A20_bIsNewTray := FALSE;
				iStep := 999;	
			ELSE
				G_Auto.A20_bTrayReady := FALSE;	
				G_Auto.A20_bTrayFinish := TRUE;
				iStep := 0;	
			END_IF
		END_IF
		
	999://Job Done
		iStep := 0;	
		
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="ST20_TraySequence">
      <LineId Id="76" Count="0" />
      <LineId Id="149" Count="1" />
      <LineId Id="148" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="230" Count="0" />
      <LineId Id="78" Count="2" />
      <LineId Id="83" Count="10" />
      <LineId Id="97" Count="1" />
      <LineId Id="100" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="223" Count="1" />
      <LineId Id="167" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="121" Count="1" />
      <LineId Id="126" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="128" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="130" Count="2" />
      <LineId Id="205" Count="0" />
      <LineId Id="200" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="201" Count="0" />
      <LineId Id="208" Count="1" />
      <LineId Id="211" Count="1" />
      <LineId Id="210" Count="0" />
      <LineId Id="138" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="46" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>